Added missing graph labels

--- a/P8/Experiments/SuiteConfigs/6ShotKNNFast.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotKNNFast.ini
@@ -4,3 +4,6 @@ Include = Experiments/SuiteConfigs/BaseConfigs/6ShotFast.ini
 [SUITEOPTIONS]
 ExperimentName = Ours (6 shot - KNN - Fast)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotKNNFast.ini
+
+GenerateGraphs = True
+GenerateAccuracyGraphs = True
