Moved the dataset configs to their own folder

--- a/P8/Experiments/SuiteConfigs/BaseConfigs/BaseFast.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/BaseFast.ini
@@ -1,5 +1,5 @@
 [SUITEOPTIONS]
-ExperimentConfigDir = Experiments/Configs
+ExperimentConfigDir = Experiments/Configs/DatasetConfigs
 ExperimentResultsDir = Experiments/Results
 ExperimentRounds = 1
 BaseConfig = None
