--- a/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFullPurge.ini
+++ b/P8/Experiments/Configs/BaseConfigs/6ShotProtonetFullPurge.ini
@@ -1,10 +1,11 @@
 [INCLUDE]
 Include1 = Experiments/Configs/BaseConfigs/BaseProtonet.ini
-Include2 = Experiments/Configs/BaseConfigs/8Shot.ini
+Include2 = Experiments/Configs/BaseConfigs/6Shot.ini
 
 [DATACONVERTER]
-featureCount = 8
+featureCount = 32
 attributes = minDist
+purgeOddData = True
 
 [NETTRAINER]
 train_epochs = 5
