--- a/P8/Experiments/Configs/BaseConfigs/8ShotProtonetFullPurge.ini
+++ b/P8/Experiments/Configs/BaseConfigs/8ShotProtonetFullPurge.ini
@@ -3,8 +3,9 @@ Include1 = Experiments/Configs/BaseConfigs/BaseProtonet.ini
 Include2 = Experiments/Configs/BaseConfigs/8Shot.ini
 
 [DATACONVERTER]
-featureCount = 8
+featureCount = 32
 attributes = minDist
+purgeOddData = True
 
 [NETTRAINER]
 train_epochs = 5
