--- a/P8/Experiments/SuiteConfigs/6ShotProtonetFullPurge.ini
+++ b/P8/Experiments/SuiteConfigs/6ShotProtonetFullPurge.ini
@@ -4,3 +4,6 @@ Include = Experiments/SuiteConfigs/BaseConfigs/6ShotFull.ini
 [SUITEOPTIONS]
 ExperimentName = Ours (6 shot - ProtoNet - 32 Featues - Purge)
 BaseConfig = Experiments/Configs/BaseConfigs/6ShotProtonetFullPurge.ini
+
+GenerateCandidatesGraph = True
+GenerateRejectsGraph = True
