Fixed base config

--- a/P8/Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
@@ -11,7 +11,7 @@ GenerateExperimentGraph = True
 GenerateClassGraphs = True
 GenerateShapeletGraphs = True
 GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
+GenerateAugmentedSourceGraph = False
 GenerateCandidatesGraph = False
 GenerateRejectsGraph = False
 
