--- a/P8/Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/8ShotFull.ini
@@ -2,6 +2,7 @@
 Include = Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
 
 [SUITEOPTIONS]
-ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
+#ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface1,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
+ExperimentsToRun = ArrowHead,BME,CBF,Chinatown,ECG200,GunPoint,GunPointAgeSpan,GunPointOldVersusYoung,ItalyPowerDemand,MoteStrain,Plane,SonyAIBORobotSurface2,SyntheticControl,ToeSegmentation1,TwoLeadECG,UMD,Wine
 
 ComparisonData = ../ComparisonData/8shot.csv
