--- a/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/src/CMakeLists.txt
+++ b/P8/DataConverters/ShapeletHistogramConverter/FeatureExtraction/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 set(CMAKE_CXX_STANDARD 20)
 add_library(Sources INTERFACE
-        IO/FileHanding.h misc/Constants.h core/WindowGeneration.h core/InformationGain.h core/feature_finding/FeatureFinding.h IO/Logger.h
-        IO/ArgumentParser.h core/attributes/Attribute.h types/Feature.h core/attributes/Frequency.h core/attributes/MinDist.h core/attributes/AttributeBuilder.h core/feature_finding/Evaluation.h
-        core/attributes/MaxDist.h core/attributes/OccPos.h preprocessing/DataAugmentation.h types/FeatureSet.h types/FeatureHistogram.h types/FeatureHistogramBuilder.h types/FeatureHistogramSet.h types/ClassCount.h types/Series.h types/SeriesMap.h types/SeriesSet.h types/ValueLine.h)
+        IO/FileHanding.hpp misc/Constants.hpp core/WindowGeneration.hpp core/InformationGain.hpp core/feature_finding/FeatureFinding.hpp IO/Logger.hpp
+        IO/ArgumentParser.hpp core/attributes/Attribute.hpp types/Feature.hpp core/attributes/Frequency.hpp core/attributes/MinDist.hpp core/attributes/AttributeBuilder.hpp core/feature_finding/Evaluation.hpp
+        core/attributes/MaxDist.hpp core/attributes/OccPos.hpp preprocessing/DataAugmentation.hpp types/FeatureSet.hpp types/FeatureHistogram.hpp types/FeatureHistogramBuilder.hpp types/FeatureHistogramSet.hpp types/ClassCount.hpp types/Series.hpp types/SeriesMap.hpp types/SeriesSet.hpp types/ValueLine.hpp)
