--- a/P8/Experiments/SuiteConfigs/FeatureCountTests/FeatureCountBase.ini
+++ b/P8/Experiments/SuiteConfigs/FeatureCountTests/FeatureCountBase.ini
@@ -6,7 +6,7 @@ GenerateExperimentGraph = True
 GenerateClassGraphs = False
 GenerateShapeletGraphs = True
 GenerateOriginalSourceGraph = True
-GenerateAugmentedSourceGraph = True
+GenerateAugmentedSourceGraph = False
 GenerateCandidatesGraph = False
 GenerateRejectsGraph = False
 
