--- a/P8/Experiments/Configs/BaseConfigs/Noise/Protonet/6Shot/30Noise.ini
+++ b/P8/Experiments/Configs/BaseConfigs/Noise/Protonet/6Shot/30Noise.ini
@@ -1,7 +1,7 @@
 [INCLUDE]
 Include1 = Experiments/Configs/BaseConfigs/BaseProtonet.ini
-Include2 = Experiments/Configs/BaseConfigs/8Shot.ini
+Include2 = Experiments/Configs/BaseConfigs/6Shot.ini
 Include3 = Experiments/Configs/BaseConfigs/BaseFeatureExtractor.ini
 
 [DATACONVERTER]
-smoothingDegree = 6
+noisifyAmount = 0.30
