--- a/P8/Experiments/Configs/BaseConfigs/Noise/Protonet/6Shot/60Noise.ini
+++ b/P8/Experiments/Configs/BaseConfigs/Noise/Protonet/6Shot/60Noise.ini
@@ -4,4 +4,4 @@ Include2 = Experiments/Configs/BaseConfigs/6Shot.ini
 Include3 = Experiments/Configs/BaseConfigs/BaseFeatureExtractor.ini
 
 [DATACONVERTER]
-smoothingDegree = 10
+noisifyAmount = 0.60
