--- a/P8/Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
@@ -1,6 +1,6 @@
 [SUITEOPTIONS]
 ExperimentConfigDir = Experiments/Configs/DatasetConfigs
-ExperimentResultsDir = Experiments/Results
+ExperimentResultsDir = Experiments/Results/Run
 ExperimentRounds = 3
 BaseConfig = None
 
