--- a/P8/Experiments/SuiteConfigs/Purge/Protonet/8Shot/Purge.ini
+++ b/P8/Experiments/SuiteConfigs/Purge/Protonet/8Shot/Purge.ini
@@ -4,5 +4,5 @@ Include2 = Experiments/SuiteConfigs/Purge/PurgeBase.ini
 
 [SUITEOPTIONS]
 ExperimentName = Ours (8 shot - ProtoNet - 32 Featues - Purge)
-ExperimentResultDir = "Experiments/Results/8Shot - Protonet - 32 Features - Purge"
+ExperimentResultsDir = Experiments/Results/8Shot - Protonet - 32 Features - Purge
 BaseConfig = Experiments/Configs/BaseConfigs/Purge/Protonet/8Shot/Purge.ini
