Added noise to the optimal config

--- a/P8/Experiments/Configs/BaseConfigs/Optimal/Protonet/6Shot/Optimal.ini
+++ b/P8/Experiments/Configs/BaseConfigs/Optimal/Protonet/6Shot/Optimal.ini
@@ -7,3 +7,4 @@ Include3 = Experiments/Configs/BaseConfigs/BaseFeatureExtractor.ini
 featureCount = 32
 smoothingDegree = 2
 attributes = freq0.1
+noisifyAmount = 0.02
