Ignoring bad dataset

--- a/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
+++ b/P8/Experiments/SuiteConfigs/BaseConfigs/5ShotFull.ini
@@ -2,6 +2,6 @@
 Include = Experiments/SuiteConfigs/BaseConfigs/BaseFull.ini
 
 [SUITEOPTIONS]
-ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,ProximalPhalanxTW,Strawberry,SwedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
+ExperimentsToRun = Adiac,Beef,BeetleFly,BirdChicken,ChlorineConcentration,Coffee,CricketX,CricketY,CricketZ,DistalPhalanxOutlineAgeGroup,DistalPhalanxOutlineCorrect,DistalPhalanxTW,ECG200,ECG5000,ECGFiveDays,ElectricDevices,FaceAll,FaceFour,FordA,FordB,InsectWingbeatSound,Meat,MedicalImages,MiddlePhalanxOutlineAgeGroup,MiddlePhalanxOutlineCorrect,MiddlePhalanxTW,PhalangesOutlinesCorrect,ProximalPhalanxOutlineAgeGroup,ProximalPhalanxOutlineCorrect,Strawberry,SwedishLeaf,SyntheticControl,TwoPatterns,UWaveGestureLibraryX,UWaveGestureLibraryY,UWaveGestureLibraryZ,Wafer,Wine,Yoga
 
 ComparisonData = ../ComparisonData/5shot.csv
