Setup for new noise and smooth run

--- a/P8/Experiments/Configs/BaseConfigs/Noise/Protonet/6Shot/64Noise.ini
+++ b/P8/Experiments/Configs/BaseConfigs/Noise/Protonet/6Shot/64Noise.ini
@@ -2,6 +2,7 @@
 Include1 = Experiments/Configs/BaseConfigs/BaseProtonet.ini
 Include2 = Experiments/Configs/BaseConfigs/6Shot.ini
 Include3 = Experiments/Configs/BaseConfigs/BaseFeatureExtractor.ini
+Include4 = Experiments/Configs/BaseConfigs/Noise/baseNoise.ini
 
 [DATACONVERTER]
 noisifyAmount = 0.64
